--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -1,3 +1,5 @@
+@use 'mixins' as *;
+
 :root {
   --toc-width: 260px;
 }
@@ -8,6 +10,7 @@ html {
   overflow-y: auto;
   scroll-padding-top: calc(var(--header-collapsed-height) + var(--gap));
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -129,6 +132,40 @@ body.literate main table {
   .toc-is-active .main-content {
     max-width: calc(var(--toc-width) + var(--gap) + 960px);
     margin: 0 auto;
+  }
+}
+
+.info {
+  @include user-select(none);
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: baseline;
+  color: var(--fg2-color);
+  font-size: var(--font-size-smaller);
+
+  @media (width < 450px) {
+    grid-template-columns: 1fr;
+  }
+
+  aside.author {
+    a {
+      text-decoration: none;
+
+      .text {
+        color: var(--fg2-color);
+        text-decoration: underline;
+        text-decoration-color: var(--fg2-color);
+        text-decoration-thickness: 1px;
+        text-underline-offset: 3px;
+      }
+    }
+
+    .avatar {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+      margin-left: 4px;
+    }
   }
 }
 
